--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div>
                 <input type="range" id="speed-select" name="points" min="0" max="100" value="30">Select Speed</input>
             </div>
+            <div id="progress-bar"></div>
             <div>
                 <button class="start" id="start">START</button>
             </div>
