--- a/index.html
+++ b/index.html
@@ -12,20 +12,24 @@
 </head>
 
 <body>
-    
+
     <header class="head" id="head-1">
         <!-- <h1> -->
-            <i class="fas fa-chess-queen" style="color:rgb(17, 1, 137)"></i>&nbspN Queens Visualizer
+        <i class="fas fa-chess-queen" style="color:rgb(254, 205, 255)"></i>&nbspN Queens Visualizer
         <!-- </h1> -->
     </header>
-    <div class="main" id = "main-body">
+    <div class="main" id="main-body">
         <div class="user-input">
             <div class="input">
                 <p>Enter the number of queens:</p>
                 <input type="text" id="input-num"></input>
             </div>
-            <div class="slider">
-                <input type="range" id="speed-select" name="points" min="0" max="100" value="30">Select Speed</input>
+            <div>
+                <p>Select Speed: </p>
+                <input type="range" id="speed-select" class="slider" name="points" min="0" max="100" value="30"></input>
+                <p id="slow-fast">
+                <pre>Slow                                                       Fast</pre>
+                </p>
             </div>
             <div id="progress-bar"></div>
             <div class="start-button">
@@ -33,10 +37,10 @@
             </div>
         </div>
         <div class="main-content">
-            <div id = "no-of-arrangements">
+            <div id="no-of-arrangements">
 
             </div>
-            <div id = "chess-boards">
+            <div id="chess-boards">
 
             </div>
         </div>
